# tree-sitter-cil

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  todo.ppath  tree-sitter.json
assets/: a.ts  c#-highlights.scm  c#-tags.scm  c#-textobjects.scm  dark_plus_plus.toml  highlightExample.toml  languages.toml  test.il
bindings/c/: tree-sitter-cil.pc.in
bindings/c/tree_sitter/: tree-sitter-cil.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cil/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCilTests/: TreeSitterCilTests.swift
queries/: highlights.scm  injections.scm
src/: index.js
src/assets/: c#.url  il.json  test.il
